# camp2025-stock

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ESCROW_SYSTEM_SUMMARY.md  INTEGRATION.md  README.md  docker-compose.yml  index.ts  package.json  test_escrow_system.py  test_frontend_cancel.md
backend/: .env.example  CONCURRENCY_CONTROL_STRATEGIES.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  REFACTOR_TEST_SUMMARY.md  SERVICE_DIRECTORY.md  WRITE_CONFLICT_IMPROVEMENTS.md  bot.py  complete_refactor_test.py  config.yml  debug_collections.py  debug_with_token.py  env_config.py  fix_negative_stocks.py  fix_negative_stocks_api.py  generate_price_variation.py  generate_trading_data.py  init_user_escrow_fields.py  main.py  point_logs_analysis_report.md  pyproject.toml  quick_refactor_test.py  requirements.txt  start_refactored_app.py  test_audit_system.py  test_auto_repay.py  test_debt_system.py  test_enhanced_transfer.py  test_improved_repay.py  test_market_fix.py  test_price_fix.py  test_price_mechanism.py  test_pvp_debt_check.py  test_rate_limiter.py  test_refactored_system.py  test_self_transfer.py  test_write_conflict.py
backend/app/: config.py  main.py  main_refactored.py
backend/config/: application.example.json  production.example.json
backend/docs/: escrow_api_changes.md
backend/scripts/: debug_login.py  env_config.py  fix_negative_stocks.py  fix_negative_stocks_api.py  generate_price_variation.py  init_user_escrow_fields.py  start_refactored_app.py  test_escrow_system.py
backend/test/: README_SIMULATION.md  (+13 more)
(+307 files in other folders)
