[project]
name = "backend"
version = "0.1.0"
description = "SITCON Camp 2025 點數系統後端 API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "motor>=3.7.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "requests>=2.32.0",
    "setuptools",
]
